<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="Twitter configuration">
        <EditTextPreference
            android:summary="@string/pref_twitter_username_summary"
            android:title="@string/pref_twitter_username_title"
            android:key="@string/pref_twitter_username_key" />
        </PreferenceCategory>

    <PreferenceCategory
        android:title="Configuration">
        
		<ListPreference android:title="@string/pref_server_port_title"
           android:summary="@string/pref_server_port_summary"
           android:key="@string/pref_server_port_key"
           android:defaultValue="55004"
           android:entries="@array/pref_service_options"
           android:entryValues="@array/pref_service_values"/>
			
		<ListPreference android:title="@string/pref_default_view_title"
           android:summary="@string/pref_default_view_summary"
           android:key="@string/pref_default_view_key"
           android:defaultValue="map"
           android:entries="@array/pref_default_view_options"
           android:entryValues="@array/pref_default_view_values"/>
		
		<ListPreference android:title="@string/pref_server_radius_title"
           android:summary="@string/pref_server_radius_summary"
           android:key="@string/pref_server_radius_key"
           android:defaultValue="3000"
           android:entries="@array/pref_server_radius_options"
           android:entryValues="@array/pref_server_radius_values"/>
		
		<ListPreference android:title="@string/pref_sort_tweets_title"
           android:summary="@string/pref_sort_tweets_summary"
           android:key="@string/pref_sort_tweets_key"
           android:defaultValue="age"
           android:entries="@array/pref_sort_tweets_options"
           android:entryValues="@array/pref_sort_tweets_values"/>
		
		<CheckBoxPreference android:title="@string/pref_profanity_filter_title"
		    android:summary="@string/pref_profanity_filter_summary"
		    android:key="@string/pref_profanity_filter_key"
		    android:defaultValue="false" />
		
		
    </PreferenceCategory>
</PreferenceScreen>